# adess

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  known_limits.txt  rules.txt
.cache/clangd/index/: check.c.DCE595E6206CF422.idx  check.h.27F571B53C6F440D.idx  command.c.2047C76CED0AA3D8.idx  command.h.93090C96A8648101.idx  convert.c.47E9411C656EFC55.idx  convert.h.808AC1476467451D.idx  export.c.5517D6B7C915F552.idx  export.h.73B0520DC67773B9.idx  extract.c.F54CB0BA35D1368D.idx  extract.h.F89D89CAF3B4EE58.idx  fourier.c.06AEB5FB74F4C29D.idx  fourier.h.867E076B2ACFE453.idx  help.c.FD70BF0F2F14329D.idx  help.h.668678BDABA92D00.idx  main.c.716E680739B09CC7.idx  main.h.DF904FE672E89651.idx  make_engine.c.172456DFFD8A950D.idx  make_engine.h.50897EAE0B553311.idx  make_project.c.F5FECE6AF6D6455D.idx  (+15 more)
_codeql_build_dir/: Makefile  adess
include/: .parse.h.swp  main.h  parse.h  struct_value.h  utils.h
include/commands/: command.h  credits.h  guide.h  help.h  make.h  make_engine.h  make_project.h  make_scene.h  render.h
include/files/: check.h  export.h  extract.h  write.h
include/render/: convert.h  fourier.h  modify-amplitudes.h  multithreading.h  pitch-shift.h  render-general.h
src/: .main.c.swp  .parse.c.swp  main.c  parse.c  utils.c
src/commands/: .render.c.swp  command.c  credits.c  guide.c  help.c  make.c  make_engine.c  make_project.c  make_scene.c  render.c
src/files/: check.c  export.c  extract.c  write.c
src/render/: convert.c  fourier.c  modify-amplitudes.c  multithreading.c  pitch-shift.c  render-general.c
test/: test.sh
(+27 files in other folders)
